# Flicks

./: .gitignore  Cargo.toml  cargo.toml
cli/: Cargo.toml
cli/src/: avatar_providers.rs  file_repository.rs  image_storage.rs  main.rs
core/: Cargo.toml
core/flicks-core/: Cargo.toml
core/flicks-core/src/: image.rs  lib.rs
core/flicks-telegram/flicks-telegram/: Cargo.toml
core/src/: command.rs  discord_client.rs  lib.rs
core/src/avatars_providers/: avatars_providers.rs
src/: main.rs
src/core/flicks-core/: Cargo.toml
src/core/flicks-core/src/: avatar_pipeline.rs  errors.rs  image.rs  lib.rs
src/core/flicks-discord/: Cargo.toml
src/core/flicks-discord/src/: discord_client.rs
src/core/flicks-telegram/: Cargo.toml
src/core/flicks-telegram/src/: lib.rs  telegram_client.rs
src/file-system-provider/: Cargo.toml
src/file-system-provider/src/: avatar_providers.rs  file_repository.rs  image_storage.rs  lib.rs
