[package]
name = "flicks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
dotenv_codegen = "0.15.0"
flicks-core = { path = "../core", version = "=0.1.0" }
base64 = "0.13.0"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.1.0"